# aurora

./: .gitignore  README.md  pyproject.toml
.aurora/history/: change_1713970452.txt  change_1714400000.txt  change_1716820552.txt  change_1718180290.txt  change_1718181350.txt  change_1718183000.txt
aurora/: .gitignore  __main__.py  chat.py  render_prompt.py
aurora/agent/: README.md  agent.py  config.py  conversation.py  queued_tool_handler.py  tool_handler.py
aurora/agent/tools/: __init__.py  ask_user.py  bash_exec.py  create_directory.py  create_file.py  fetch_url.py  file_str_replace.py  find_files.py  gitignore_utils.py  move_file.py  remove_file.py  replace_file.py  rich_live.py  rich_utils.py  search_text.py  view_file.py
aurora/cli/: arg_parser.py  config_commands.py  logging_setup.py  main.py  runner.py
aurora/cli_chat_shell/: __init__.py  chat_loop.py  chat_shell.py  commands.py  session_manager.py  ui.py
aurora/prompts/: system_instructions.txt
aurora/templates/: system_instructions.j2
aurora/web/: __main__.py  app.py  index.html
aurora/web/.aurora/: config.json
aurora/web/.aurora/history/: change_1718181323.txt  change_1718181323_1.txt  change_1718181863.txt  change_1718183000.txt
aurora/web/docs/: structure.md
aurora/web/static/: app.js  eslint.config.js  style.css
aurora/web/static/js/: fireworks.js  main.js  modal.js  progressFormatter.js  sessionControl.js  stream.js  terminal.js  toolProgress.js
aurora/web/templates/: index.html
docs/: structure.md
